@@ -49,6 +49,11 @@ Ported from blueprint to make sure embedded views work without blueprint.
     font-weight: bold;
 }
 
+.ui-slider-range {
+    background-color: red;
+    background-image: none;
+}
+
 /*
 .cv-view-panel div {
 	margin: 0px;
@@ -73,12 +78,24 @@ Ported from blueprint to make sure embedded views work without blueprint.
 /* Override blueprint highlight */
 .cv-view-panel .highlight {background: inherit;}
 
+/* Override jQuery UI radius */
+.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl { -moz-border-radius-topleft: 3px; /* -webkit-border-top-left-radius: 3px; */ -khtml-border-top-left-radius: 3px; border-top-left-radius: 3px; }
+.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr { -moz-border-radius-topright: 2px; -webkit-border-top-right-radius: 2px; -khtml-border-top-right-radius: 2px; border-top-right-radius: 3px; }
+.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl { -moz-border-radius-bottomleft: 3px; -webkit-border-bottom-left-radius: 3px; -khtml-border-bottom-left-radius: 3px; border-bottom-left-radius: 3px; }
+.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br { -moz-border-radius-bottomright: 3px; -webkit-border-bottom-right-radius: 3px; -khtml-border-bottom-right-radius: 3px; border-bottom-right-radius: 3px; }
+
+
 /*
 Custom Cubesviewer styles
 */
 
 .cv-view-panel input {
     vertical-align: middle;
+}
+
+.cv-view-panel input {
+	border: 1px solid #d0d0d0;
+	padding: 0px 2px 0px 2px;
 }
 
 .cv-view-panel h1 {
@@ -123,9 +140,6 @@ Custom Cubesviewer styles
 .ui-icon {
     display: inline-block;
     vertical-align: middle;
-}
-.ui-widget-header {
-    padding: 2px 4px 2px 4px;   
 }
 
 .ui-jqgrid tr.jqgrow td {
@@ -223,4 +237,8 @@ div.cv-view-dimensionfilter-item {
 
 div.nvtooltip {
 	background-color : rgba(255,255,255,0.9);
+}
+
+.infopiece span {
+    vertical-align: middle;
 }
