@@ -101,7 +101,7 @@ function cubesviewerViewCube () {
 		
 		// Menu toolbar
 		$(view.container).find('.cv-view-viewmenu').empty().append(
-			'<div style="float: right; z-index: 9990; margin-bottom: 5px;"><div class="cv-view-toolbar ui-widget-header ui-corner-all" style="display: inline-block;">' +
+			'<div style="float: right; z-index: 9990; margin-bottom: 5px;"><div class="cv-view-toolbar ui-widget-header ui-corner-all" style="display: inline-block; padding: 2px;">' +
 			'</div></div>'
 		);
 		
