@@ -36,6 +36,7 @@
 <script type="text/javascript" src="{{ STATIC_URL }}js/cubesviewer/cubesviewer.views.cube.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/cubesviewer/cubesviewer.views.cube.explore.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/cubesviewer/cubesviewer.views.cube.datefilter.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/cubesviewer/cubesviewer.views.cube.rangefilter.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/cubesviewer/cubesviewer.views.cube.series.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/cubesviewer/cubesviewer.views.cube.chart.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/cubesviewer/cubesviewer.views.cube.facts.js"></script>
