@@ -1,4 +1,5 @@
 0.8-devel
+    + New rangefilter plugin (closes #21).
     + Added support for a cv-ignore option in the model, to ignore
       dimensions.
     + Separated datefilter as a plugin (closes #8).
